[gd_scene load_steps=7 format=2]

[ext_resource path="res://nodes/Mobswim.tscn" type="PackedScene" id=1]
[ext_resource path="res://nodes/Mob.tscn" type="PackedScene" id=2]
[ext_resource path="res://nodes/HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://nodes/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Main.gd" type="Script" id=5]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -0.786407, -1.00451, 0, 0, 0, 0, 1023.1, 1.82391, 0, 0, 0, 0, 1023.81, 801.562, 0, 0, 0, 0, -2.20062, 800.148, 0, 0, 0, 0, -1.4935, -0.297401, 0, 0, 0, 0, -0.786407, -1.00451 )
}

[node name="Main" type="Node"]
script = ExtResource( 5 )
mob_scene = ExtResource( 2 )
swim_mob_scene = ExtResource( 1 )

[node name="Player" parent="." instance=ExtResource( 4 )]
speed = 601

[node name="MobTimer" type="Timer" parent="."]

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 523.203, 455.201 )

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2( -0.786407, -1.00451 )
rotation = 0.00276242

[node name="HUD" parent="." instance=ExtResource( 3 )]

[node name="SwimMobTimer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="timeout" from="SwimMobTimer" to="." method="_on_SwimMobTimer_timeout"]
